# run-nix-shell

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  action.yaml  bun.lockb  default.nix  flake.nix  index.js  nixpkgs.nix  non_module_deps.bzl  package-lock.json  package.json
.github/: dependabot.yml  renovate.json
.github/actions/set_up_runner/: action.yaml
.github/workflows/: ci.yaml  move_major_ver_tag_on_release.yml
tests/integration_tests/: README.md  shell.nix
tests/tools_tests/: BUILD.bazel  custom_var_bool_test.sh  custom_var_str_test.sh  derivation_path_test.sh  multi_line_script_test.sh  pure_test.sh  rns_opts_test.sh  run_nix_shell_test.bzl  run_nix_shell_test.sh  run_nix_shell_test_runner.sh  script_file_test.sh  shell_flags_test.sh  simple_script_test.sh  verbose_test.sh  working_dir_test.sh
tools/: BUILD.bazel  run_nix_shell  run_nix_shell.sh
