load("@cgrindel_bazel_starlib//updatesrc:defs.bzl", "updatesrc_diff_and_update")

# exports_files(["flake.lock"])

filegroup(
    name = "flake_files",
    srcs = [
        "flake.lock",
        "flake.nix",
    ],
    visibility = ["//:__subpackages__"],
)

genrule(
    name = "dist",
    cmd = """
    set -euo pipefail
    # provide a writable home dir
    export HOME="$$(pwd)/NOHOME"
    mkdir "$$HOME"
    # index.js should not be a symlink
    cat index.js > i.js && mv i.js index.js
    BUN=$(location @bun//:bin/bun)
    $$BUN install --no-save
    $$BUN build --target=node --outfile=$@ $(location index.js)
    """,
    srcs = ["package.json", "bun.lockb", "index.js"],
    tags = ["requires-network"],
    tools = ["@bun//:bin/bun"],
    outs = ["generated/bundle.mjs"],
    visibility = ["//:__subpackages__"],
)

updatesrc_diff_and_update(
    name = "update",
    srcs = ["dist/bundle.mjs"],
    outs = [":dist"],
)
