load("@cgrindel_bazel_starlib//updatesrc:defs.bzl", "updatesrc_diff_and_update")

exports_files(
    ["flake.lock"],
    visibility = ["//:__subpackages__"],
)

genrule(
    name = "dist",
    srcs = [
        "package.json",
        "bun.lockb",
        "index.js",
    ],
    outs = ["generated/bundle.mjs"],
    cmd = """
    set -euo pipefail
    # provide a writable home dir
    export HOME="$$(pwd)/NOHOME"
    mkdir "$$HOME"
    # index.js should not be a symlink
    cat index.js > i.js && mv i.js index.js
    BUN=$(location @bun//:bin/bun)
    $$BUN install --no-save
    $$BUN build --target=node --outfile=$@ $(location index.js)
    """,
    tags = ["requires-network"],
    tools = ["@bun//:bin/bun"],
    visibility = ["//:__subpackages__"],
)

updatesrc_diff_and_update(
    name = "update",
    srcs = ["dist/bundle.mjs"],
    outs = [":dist"],
)
