module(
    name = "run_nix_shell",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_nixpkgs_core",
    version = "0.10.0",
)

bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.18.1",
    dev_dependency = True,
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = ":nixpkgs.nix",
    file_deps = [":flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "nodejs",
    # keep this in sync with action.yaml
    attr = "nodejs_20",
    repo = "@nixpkgs",
)
use_repo(nix_pkg, "nodejs")
